Added new sorting logic